--- a/src/styles/components/_ConfigFile.scss
+++ b/src/styles/components/_ConfigFile.scss
@@ -9,7 +9,7 @@ $aside: (
 	mobile-breakpoint: md,
 	width: 15rem,
 	// Don't forget to make changes to the .env file as well.
-	background-color: shade-color($primary, 95%),
+	background-color: shade-color($primary, 75%),
 	border-size: 0,
 	border-color: shade-color($primary, 95%),
 	minimize: (
@@ -91,8 +91,8 @@ $header: (
 
 $subheader: (
 	height: 4rem,
-	// background-color: $white,
-	background-color: rgb(229 229 229 / 80%),
+	background-color: $white,
+	//background-color: rgb(229 229 229 / 80%),
 	dark-background-color: shade-color($dark-body-bg, 20%),
 	color: $body-color,
 	color-dark: $dark,
