--- a/src/styles/components/layout/_subheader.scss
+++ b/src/styles/components/layout/_subheader.scss
@@ -47,9 +47,9 @@
 	background-color: var(--#{$prefix}subheader-bg);
 	box-shadow: map.get($header, box-shadow);
 	color: var(--#{$prefix}subheader-color);
-	margin: 3px;
-	border-radius: 3px;
-	margin-bottom: 0px;
+	// margin: 3px;
+	// border-radius: 3px;
+	// margin-bottom: 0px;
 	
 	@at-root .header + .content & {
 		top: map.get($header, height);
