--- a/src/styles/settings/_index.scss
+++ b/src/styles/settings/_index.scss
@@ -288,7 +288,8 @@ $dark-form-range-track-bg: $gray-700 !default;
 //
 // Warning: Avoid customizing these values. They're used for a bird's eye view
 // of components dependent on the z-axis and are designed to all work together.
-$zindex-aside: 1035 !default;
+$zindex-aside: 1060 !default;
+// $zindex-aside: 1035 !default;
 $zindex-dropdown: 1071;
 
 // Navs
